  * Add H#merge
  * Add H#update
  * Add Enumerable#clear
  * Add Enumerable#index
  * Add H#invert
  * Add Enumerable#replace
  * Add Enumerable#keys
  * Add Enumerable#values
  * Add Enumerable#values_at
  * Add Enumerable#shift
  * Add A#unshift
  * Rename Enumerable#includes to Enumerable#has_value
  * Add Enumerable#has_key
  * Enumerable#offsetGet accepts an optional default value
  * Add alias_method support

2009-03-13 - Sean Huber (shuber@huberry.com)
  * Add Enumerable (incomplete)
  * Update doc/TODO
  * Add Enumerable#partition
  * Add global evaluate_block($block, $arguments = array()) method
  * Refactor EnumerableMethods
  * Make EnumerableMethods class abstract
  * Add Enumerable#inject and refactor global evaluate_block
  * Add Enumerable#collect
  * Add Enumerable#sort_by

2009-03-12 - Sean Huber (shuber@huberry.com)
  * Update README
  * Move doc/ directory
  * Update doc/TODO
  * Remove "look into ReflectionMethod" from doc/TODO (wont work)
  * Add Object#is_a
  * Object#is_a now uses the instanceof operator
  * Add global extend method
  * Object#super must be called from inside of an instance method
  * Remove Object#instance_extended_* methods
  * Add Object#call
  * Object#call accepts a variable number of arguments and merges them with the last array of arguments
  * Remove Callback class - unnecessary
  * Make build_static_method_call() a global function
  * Object#__call now calls Object#call instead of Object#send so it can splat the arguments
  * Object#super now calls Object#call instead of Object#send so it can splat the arguments
  * Fix the extended callback
  * build_static_method_call() accepts an optional $variable_name argument
  * Add Object#call_extended_method and fix methods with missing returns
  * Add Object#extract_call_arguments($args) and update call methods
  * Remove Object#extend - just use extend($this, 'Class1', 'Class2')
  * Update Object#extract_call_arguments
  * Add Object#method_extended